[package]
name = "mandelbrot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lume = { git = "https://github.com/SamokhinIlya/lume" }
anyhow = "1.0.68"
num = "0.4"
itertools = "0.10"
rayon = "1.6"

[dev-dependencies]
criterion = "0.4"

[profile.release]
debug = true

[profile.bench]
debug = true

[[bench]]
name = "bench"
harness = false